src/styles/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
	h1 {
		@apply text-[1.6rem] font-semibold md:text-3xl lg:text-4xl;
	}

	h2 {
		@apply text-xl font-semibold;
	}

	h3 {
		@apply text-lg font-semibold;
	}

	h4 {
		@apply text-base font-semibold;
	}

	h5 {
		@apply text-sm font-semibold;
	}

	h6 {
		@apply text-sm font-semibold;
	}

	small {
		@apply text-xs;
	}

	p {
		@apply text-sm lg:text-base;
	}

	:root {
		--bunker-50: #f2f4f7;
		--bunker-100: #e2e6ee;
		--bunker-200: #c1cbdb;
		--bunker-300: #a1b0c9;
		--bunker-400: #8195b6;
		--bunker-500: #6079a3;
		--bunker-600: #4c6184;
		--bunker-700: #3a4a64;
		--bunker-800: #273243;
		--bunker-900: #141a23;
		--bunker-950: #0b0e13;

		--radius: 0.5rem;

		--background: var(--bunker-950);
		--foreground: var(--bunker-50);
		--card: var(--bunker-950);
		--card-foreground: var(--bunker-50);
		--popover: var(--bunker-950);
		--popover-foreground: var(--bunker-50);
		--primary: var(--bunker-50);
		--primary-foreground: var(--bunker-900);
		--secondary: var(--bunker-800);
		--secondary-foreground: var(--bunker-300);
		--muted: var(--bunker-800);
		--muted-foreground: var(--bunker-100);
		--accent: var(--bunker-900);
		--accent-foreground: var(--bunker-100);
		--destructive: red;
		--destructive-foreground: var(--bunker-100);
		--border: var(--bunker-900);
		--input: var(--bunker-900);
		--ring: var(--bunker-200);
		--chart-1: hsl(220 70% 50%);
		--chart-2: hsl(160 60% 45%);
		--chart-3: hsl(30 80% 55%);
		--chart-4: hsl(280 65% 60%);
		--chart-5: hsl(340 75% 55%);
	}

	.dark {
		--background: var(--bunker-950);
		--foreground: var(--bunker-50);
		--card: var(--bunker-900);
		--card-foreground: var(--bunker-50);
		--popover: var(--bunker-950);
		--popover-foreground: var(--bunker-50);
		--primary: var(--bunker-50);
		--primary-foreground: var(--bunker-900);
		--secondary: var(--bunker-800);
		--secondary-foreground: var(--bunker-300);
		--muted: var(--bunker-800);
		--muted-foreground: var(--bunker-100);
		--accent: var(--bunker-900);
		--accent-foreground: var(--bunker-100);
		--destructive: red;
		--destructive-foreground: var(--bunker-100);
		--border: var(--bunker-800);
		--input: var(--bunker-900);
		--ring: var(--bunker-200);
		--chart-1: hsl(220 70% 50%);
		--chart-2: hsl(160 60% 45%);
		--chart-3: hsl(30 80% 55%);
		--chart-4: hsl(280 65% 60%);
		--chart-5: hsl(340 75% 55%);
	}
}

@layer components {
	.text-gradient {
		@apply bg-gradient-to-br from-sky-500 to-green-400 bg-clip-text text-transparent;
	}
}

::-webkit-scrollbar {
	@apply hidden;
}

@layer base {
	* {
		@apply border-border;
	}

	body {
		@apply bg-background text-foreground;
	}

	html {
		@apply scroll-smooth bg-background text-foreground antialiased;
	}
}

